fixed icon url in config

--- a/ember-app/app/index.html
+++ b/ember-app/app/index.html
@@ -21,7 +21,8 @@
     CONFIG: { 
       host: 'http://localhost:3000/lti_public_resources',
       imagePath: '/assets/images'
-    }
+    },
+    RETURN_TYPES: ['lti_launch_url']
   };
   </script>
 
